# ComputerAnimationProject

./: .gitignore  pygletgui.py  pygletgui2d.py  pyopenglgui.py  renderer.py  renderutils.py  run.py  simulation.py
conf/: basic.yaml  config.yaml
conf/app/: opengl1200ups.yaml  opengl120ups.yaml  pyglet2d.yaml
conf/fabric/: large.yaml  medium.yaml  small.yaml
conf/material/: linen.yaml
conf/simulation/: medium_wind.yaml  strong_wind.yaml  weak_wind.yaml
conf/static_point_setter/: corners.yaml  left_right.yaml  top_bottom.yaml  top_bottom_corners.yaml
gui/opengl/: app.py
gui/opengl/rendering/: camera.py  material.py  object3d.py  renderutils.py  shader.py  utils.py
gui/pyglet2d/: app.py  renderer.py
lab1/: .gitignore  CMakeLists.txt
lab1/raLab/dependencies/assimp/code/AssetLib/FBX/: FBXDocument.h
lab1/raLab/dependencies/assimp/code/Common/: Bitmap.cpp  FileSystemFilter.h  SGSpatialSort.cpp  SpatialSort.cpp  Subdivision.cpp
lab1/raLab/dependencies/assimp/code/PostProcessing/: CalcTangentsProcess.cpp  EmbedTexturesProcess.h  FixNormalsStep.cpp  ScaleProcess.h  ValidateDataStructure.cpp
lab1/raLab/dependencies/assimp/contrib/Open3DGC/: o3dgcArithmeticCodec.cpp  o3dgcArithmeticCodec.h
lab1/raLab/dependencies/assimp/contrib/draco/: README.md
lab1/raLab/dependencies/assimp/contrib/gtest/docs/: DevGuide.md
lab1/raLab/dependencies/assimp/include/assimp/: Bitmap.h  ByteSwapper.h  Importer.hpp  cexport.h  cimport.h  material.h  mesh.h  postprocess.h  scene.h  texture.h
lab1/raLab/dependencies/assimp/port/jassimp/jassimp/src/jassimp/: AiCamera.java  AiLight.java  AiMesh.java
lab1/raLab/dependencies/glfw/include/GLFW/: glfw3.h
lab1/raLab/dependencies/glm/: manual.md
lab1/raLab/dependencies/glm/doc/api/: a00059.html  a00059_source.html  a00062_source.html  a00243.html  a00247.html
lab1/raLab/dependencies/glm/glm/detail/: setup.hpp
lab1/raLab/dependencies/glm/glm/ext/: matrix_clip_space.hpp  matrix_transform.hpp
lab1/raLab/lab1/: CMakeLists.txt
lab1/raLab/lab1/headers/exceptions/: IOException.h  ObjectException.h
lab1/raLab/lab1/headers/model/: ApproximationBezierCurve.h  BCurve.h  BezierCurve.h  Camera.h  ControlPointChangeListener.h  ControlPolygon.h  CoordinateSystem.h  Curve.h  Frustum.h  InitializerRenderVisitor.h  InterpolationBezierCurve.h  Light.h  Mesh.h  Object.h  ObjectMaterial.h  ObjectTexture.h  RenderVisitor.h  Renderable.h  Scene.h  Shader.h  SingleViewportRenderVisitor.h  Transformable.h
lab1/raLab/lab1/headers/util/: loaders.h
lab1/raLab/lab1/shaders/: lsshader.frag  lsshader.vert  shader.vert  shader1.frag  shader1.vert
lab1/raLab/lab1/sources/: main.cpp
lab1/raLab/lab1/sources/exceptions/: IOException.cpp  MeshException.cpp
lab1/raLab/lab1/sources/model/: ApproximationBezierCurve.cpp  BCurve.cpp  BezierCurve.cpp  Camera.cpp  ControlPolygon.cpp  CoordinateSystem.cpp  Curve.cpp  Frustum.cpp  InitializerRenderVisitor.cpp  InterpolationBezierCurve.cpp  Light.cpp  Mesh.cpp  Object.cpp  ObjectMaterial.cpp  ObjectTexture.cpp  Scene.cpp  Shader.cpp  SingleViewportRenderVisitor.cpp  Transformable.cpp
lab1/raLab/lab1/sources/util/: FPSManager.cpp  loaders.cpp
lab2/: pom.xml
lab2/src/main/java/hr/fer/ra/: Env.java  IntBiConsumer.java  Particle.java  ParticleFactory.java  ParticlePanel.java  ParticleSystem.java  State.java
project/: environment.yml  run.py
project/conf/app/: opengl240ups.yaml  opengl600ups.yaml
project/conf/fabric/: small.yaml
project/conf/material/: linen.yaml
project/conf/simulation/: no_wind.yaml  strong_wind.yaml  too_strong_wind.yaml
project/conf/static_point_setter/: one_side.yaml  sides.yaml
project/gui/opengl/: app.py
project/gui/opengl/rendering/: camera.py  light.py  object3d.py  shader.py
project/run-scripts/: large_flag.sh  large_sail.sh  medium_sail.sh  small_flag.sh
project/shaders/: shader_material.frag  shader_material.vert  shader_mesh.frag  shader_mesh.vert
project/simulation/: simulation.py  util.py
run-scripts/: medium_flag.sh  small_flag.sh  small_sail.sh
simulation/: fabric.py  simulation.py
